tách service ra controller
