# index.js
@@ -1,5 +1,6 @@
 const express = require('express');
 const userRoutes = require('./src/api/routes/userRoutes.js');
+const roleRoutes = require('./src/api/routes/roleRoutes.js');
 const swaggerUi = require('swagger-ui-express');
 require('dotenv').config();
 
@@ -10,6 +11,7 @@ const app = express();
 
 app.use(express.json());
 app.use('/api/users', userRoutes);
+app.use('/api/roles', roleRoutes);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 const PORT = process.env.REACT_APP_PORT || 3001;
