# src/api/routes/roleRoutes.js
@@ -1,0 +1,14 @@
+const express = require('express');
+const router = express.Router();
+const roleController = require('../controllers/roleControllers');
+const { authenticateToken,authorizationMiddleware } = require('../../middleware/authMiddleware'); // Đảm bảo đường dẫn đúng
+
+// Tạo role mới
+// router.post('/', authenticateToken,authorizationMiddleware, roleController.createRole);
+router.post('/',roleController.createRole);
+// router.put('/', authenticateToken, roleController.updateRole);
+// router.get('/', authenticateToken, roleController.getRoles);
+
+// Thêm các route cho updateUser, deleteUser, getUser, getUsers
+
+module.exports = router;
