# swagger.yaml
@@ -11,6 +11,8 @@ paths:
   /api/users:
     post:
       summary: Create a new user
+      tags:
+        - Users
       description: ''
       consumes:
         - application/json
@@ -27,6 +29,7 @@ paths:
               - username
               - password
               - phoneNumber
+              - role_Id
             properties:
               email:
                 type: string
@@ -36,26 +39,18 @@ paths:
                 type: string
               phoneNumber:
                 type: string
+              role_Id:
+                type: string
       responses:
         '201':
           description: User created
         '400':
           description: Invalid input
-    get:
-      summary: Get a list of users
-      description: ''
-      produces:
-        - application/json
-      responses:
-        '200':
-          description: A list of users
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/User'
   /api/users/login:
     post:
       summary: Authenticate user and return JWT
+      tags:
+        - Users
       description: >
         This endpoint authenticates a user by their email and password, and returns a JWT if the authentication is successful.
       consumes:
@@ -94,6 +89,8 @@ paths:
   /api/users/change-password:
     post:
       summary: Change user password
+      tags:
+        - Users
       description: This endpoint allows authenticated users to change their password by providing the old password and the new password.
       consumes:
         - application/json
@@ -130,7 +127,66 @@ paths:
           description: User not found
         '500':
           description: Internal server error
-      
+
+  /api/roles:
+    post:
+      summary: Create a new role
+      tags:
+        - Roles
+      description: This endpoint allows authenticated users to create a new role.
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: header
+          name: Authorization
+          type: string
+          required: true
+          description: JWT Token
+        - in: body
+          name: roleDetails
+          description: Role details
+          required: true
+          schema:
+            type: object
+            required:
+              - Name
+              - Description
+              - isAdmin
+              - listClaim
+            properties:
+              Name:
+                type: string
+              Description:
+                type: string
+              isAdmin:
+                type: boolean
+              listClaim:
+                type: array
+                items:
+                  type: string
+      responses:
+        '201':
+          description: Role created successfully
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+              data:
+                $ref: '#/definitions/Role'
+        '400':
+          description: Role already exists or invalid input data
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal server error    
 
 securityDefinitions:
   Bearer:
@@ -163,3 +219,14 @@ definitions:
         format: date-time
       isActive:
         type: boolean
+  Role:
+    type: object
+    properties:
+      Name:
+        type: string
+      Description:
+        type: string
+      isAdmin:
+        type: boolean
+      listClaim:
+        type: array
